--- a/app/src/main/res/drawable/button_style.xml
+++ b/app/src/main/res/drawable/button_style.xml
@@ -1,4 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
+    <solid android:color="#1028AE"/>
+    <padding android:left="10dp"
+        android:right="10dp"/>
+    <stroke android:width="1dp"/>
+    <gradient android:centerColor="#FF9800"/>
+    <corners android:radius="30dp"></corners>
 
 </shape>
