--- a/app/src/main/res/layout/activity_choose_location.xml
+++ b/app/src/main/res/layout/activity_choose_location.xml
@@ -6,4 +6,68 @@
     android:layout_height="match_parent"
     tools:context=".ChooseLocation">
 
+    <TextView
+        android:id="@+id/top_txt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="24dp"
+        android:text="@string/choose_your_location"
+        android:textSize="25sp"
+        app:layout_constraintStart_toStartOf="parent"
+        android:textColor="@color/black"
+        app:layout_constraintTop_toTopOf="parent" />
+    <com.google.android.material.textfield.TextInputLayout
+        android:layout_width="match_parent"
+        android:layout_height="57dp"
+        android:id="@+id/location"
+        app:layout_constraintTop_toBottomOf="@id/top_txt"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="16dp"
+        android:layout_marginStart="16sp"
+        app:boxStrokeWidth="0dp"
+        android:layout_marginEnd="16dp">
+
+        <AutoCompleteTextView
+            android:id="@+id/location_list"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:drawableEnd="@drawable/drop_down_arrow"
+            android:padding="15dp"
+            android:hint="@string/choose_location"
+            android:inputType="none"
+            android:fontFamily="@font/lato"
+            android:background="@drawable/text_style"/>
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:text="@string/to_enhance_your_delivery_experience_and_ensure_your_order_reaches_you_accurately_and_promptly_please_grant_us_access_to_your_precise_location_your_convenience_is_our_priority"
+        app:layout_constraintBottom_toTopOf="@id/mnkd"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
+        android:fontFamily="sans-serif"
+        android:layout_marginBottom="30dp"
+        android:textColor="@color/black"
+        android:textSize="16sp"
+        />
+    <TextView
+        android:id="@+id/mnkd"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toEndOf="parent"
+        android:text="@string/designed_by_mnkd"
+        android:textColor="#50000000"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="10dp"
+        android:layout_marginStart="10dp"
+        app:layout_constraintStart_toStartOf="parent"
+        />
+
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
