--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -1,4 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
-  
+<menu xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:id="@+id/home"
+    android:title="@string/cart"
+    android:icon="@drawable/cart"/>
+    <item android:id="@+id/cart"
+        android:title="@string/search"
+        android:icon="@drawable/search"/>
+    <item android:id="@+id/search"
+        android:title="@string/home"
+        android:icon="@drawable/home_icon"/>
+    <item android:id="@+id/history"
+        android:title="@string/history"
+        android:icon="@drawable/history"/>
+    <item android:id="@+id/profile"
+        android:title="@string/profile"
+        android:icon="@drawable/person"/>
+
+
 </menu>
